src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__ascii.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(sqlname = \"ascii\")]\nfn ascii<'a>(a: &'a str) -> i32 {\n    a.chars().next().and_then(|c| i32::try_from(u32::from(c)).ok()).unwrap_or(0)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Ascii;
impl crate::func::EagerUnaryFunc for Ascii {
    type Input<'a> = &'a str;
    type Output<'a> = i32;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        ascii(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Ascii {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("ascii")
    }
}
fn ascii<'a>(a: &'a str) -> i32 {
    a.chars().next().and_then(|c| i32::try_from(u32::from(c)).ok()).unwrap_or(0)
}
