src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__byte_length_string.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(sqlname = \"octet_length\")]\nfn byte_length_string<'a>(a: &'a str) -> Result<i32, EvalError> {\n    let length = a.as_bytes().len();\n    i32::try_from(length)\n        .or_else(|_| Err(EvalError::Int32OutOfRange(length.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct ByteLengthString;
impl crate::func::EagerUnaryFunc for ByteLengthString {
    type Input<'a> = &'a str;
    type Output<'a> = Result<i32, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        byte_length_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for ByteLengthString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("octet_length")
    }
}
fn byte_length_string<'a>(a: &'a str) -> Result<i32, EvalError> {
    let length = a.as_bytes().len();
    i32::try_from(length)
        .or_else(|_| Err(EvalError::Int32OutOfRange(length.to_string().into())))
}
